--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -134,3 +134,33 @@
     margin: auto !important;
   }
 }
+
+.custom-prev,
+.custom-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background */
+  border: none;
+  cursor: pointer;
+  width: 3% !important;
+  color: black !important;
+  z-index: 10;
+  padding: 10px; /* Adjust padding as needed */
+  border-radius: 50%; /* Circular buttons */
+  transition: background-color 0.3s;
+}
+
+.custom-prev:hover,
+.custom-next:hover {
+  background-color: rgba(255, 255, 255, 1); /* Full opacity on hover */
+  color: black !important;
+}
+
+.custom-prev {
+  left: 10px; /* Adjust position */
+}
+
+.custom-next {
+  right: 10px; /* Adjust position */
+}
