--- a/src/pages/homebanner.css
+++ b/src/pages/homebanner.css
@@ -24,7 +24,7 @@
   padding: 12px 25px;
   background-color: #00a5f5;
   color: #fff;
-  border-radius: 50%;
+  border-radius: 70px !important;
   text-decoration: none;
   font-size: 1.5rem;
   font-weight: bold;
