--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -133,6 +133,12 @@
     text-align: center !important;
     margin: auto !important;
   }
+  .wid {
+    width: 100% !important; /* Ensure full width */
+    margin: 0 !important; /* Remove any centering margin */
+    padding: 0 10px; /* Optional: Add padding for better mobile readability */
+    box-sizing: border-box; /* Include padding/borders in width */
+  }
   /* .custom-prev,
   .custom-next {
     position: absolute;
